--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gdl
-url = https://download.gnome.org/sources/gdl/3.28/gdl-3.28.0.tar.xz
+url = https://download.gnome.org/sources/gdl/3.34/gdl-3.34.0.tar.xz
 archives = 
 giturl = https://github.com/GNOME/gdl.git
 
@@ -33,6 +33,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
